# Quantum-Tomography

./: .git-blame-ignore-revs  .gitignore  Example.py  LICENSE  MANIFEST.in  README.md  README_developer.md  cli.py  pyproject.toml  readme.txt  requirements.txt  setup.py
.github/workflows/: PublishToPypi.yml  SimpleTest.yml  code-quality.yml  lint.yml  python-package.yml  python-publish.yml  ruff.yml  test.yml
ExampleFiles/: 1_qubit_example.json  2n_detector_example.json  bell_psi_conf.txt  bell_psi_data.txt  bell_state_example.json  conf.json  conf.toml  conf.txt  crosstalk_inefficiency_example.json  data.json  data2.json  pythoneval.json  pythoneval.txt  pythoneval_video.json  pythoneval_video.txt
KwiatQuantumLib/: TomoClass.py  TomoFunctions.py
Plots/: purity_of_rand_density.py
QuantumTomography/: TomoClass.py  TomoDisplay.py  TomoDisplayHelpers.py  TomoFunctions.py  TomoFunctionsHelpers.py  TomoHelpers.py  __init__.py  cli.py
Quantum_Tomography.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
Supplementary Information/: Accidentals.rmd  Bayesian estimation.rmd  Stat Model.rmd  Stat-Model.aux  Stat-Model.out  Stat-Model.rmd  main.tex
Tests/: DataManager.py  GatherData.py  HTML_saver.py  README.md  Readme.md  SaveRun.py  SaveTestRun.py  Standard_Test_Data_1Q.mat  Standard_Test_Data_2Q.mat  TestResultsClass.py  TestRun.py  TestRunF.py  gen_Full.py  gen_General.py  gen_Monte_Carlo.py  gen_bayesian_stability.py  main.py  save_IGNORE.py  save_RandomStates.py  save_StandardData.py  testFunctions.py  test_Functions.py  test_IGNORE.py  test_app.py  test_app_full.py  test_example_2q2d.py  test_example_files.py  test_functions.py  test_github.py  test_github_publish.py  test_github_update.py  test_import_export.py  test_processtomo.py  test_properties.py  test_specifics_runs.py
Tests/ErrorLogs/: N1-e0-a0-d1-c0-b0-dr0.html  Template.html  styleSheet.css
Tests/Results/: Graph.py  analyze_General.nb.html  analyze_General.rmd  analyze_General_v1.html  analyze_Monte_Carlo.html  analyze_Monte_Carlo.rmd  simulatedTomographyData.csv  styleSheet.css
Tests/Test_States/: fixed_eval_0.txt  fixed_eval_1.txt  fixed_eval_2.txt  rand_conf.txt  rand_data.txt  rand_eval.txt
Tests/Test_States/Website_Files/: conf_0.txt  conf_1.txt  conf_2.txt  conf_temp.txt  data_1.txt  data_2.txt  data_temp.txt
_site/: README.md  cli.py  setup.py
_site/ExampleFiles/: data.txt
_site/src/: TomoClass.py  TomoDisplay.py  TomoFunctions.py
oldsrc/quantum_tomography/: TomoClass.py  TomoDisplayHelpers.py  TomoFunctions.py  TomoFunctionsHelpers.py  cli.py
scripts/: format  lint  process_tomography.py  qpt_data_03_08.json  test
src/: Debugger.py  TomoClass.py  TomoDisplay.py  TomoFunctions.py  TomoFunctionsHelpers.py  TomoHelpers.py  __init__.py  cli.py
src/QuantumTomography/: ProcessTomo.py  ProcessTomoHelpers.py  TomoClass.py  TomoClassHelpers.py  TomoDisplay.py  TomoDisplayHelpers.py  TomoFunctions.py  TomoFunctionsHelpers.py  TomoHelpers.py  Utilities.py  __init__.py  cli.py
src/qtomo/: cli.py  file_utilities.py  plotting.py  state.py  tomo_math.py  tomography.py
src_new/qtomo/: __init__.py  cli.py  file_utilities.py  plotting.py  state_utilities.py  tomo_math.py  tomography.py
tests/: TestRun.py  gen_Full.py  gen_Monte_Carlo.py  gen_bayesian_stability.py  test_example_2q2d.py  test_functions.py  test_import_export.py  test_properties.py
